@@ -3,194 +3,237 @@ package Gui.MainGui;
 import javax.swing.*;
 import javax.swing.border.EmptyBorder;
 import java.awt.*;
-import Gui.MainGui.MaeveCoffeeUI;
+import java.awt.event.HierarchyEvent;
+import java.time.LocalDateTime;
+import java.util.List;
 
-public class ReceiptDialog extends JPanel {
+public class ReceiptDialog extends JDialog {
+
     private final MaeveCoffeeUI ui;
 
-    private JLabel nameLeft, pointRight, dateLbl, timeLbl, totalLbl, rewardLbl;
+    private JLabel nameLeft, pointLeft, dateLbl, timeLbl, totalLbl, rewardLbl;
     private JPanel itemsBox;
 
-    public ReceiptDialog(MaeveCoffeeUI ui) {
+    // Realtime
+    private MaeveCoffeeUI.PointsListener pointsListener;
+
+    public ReceiptDialog(Frame owner, MaeveCoffeeUI ui) {
+        super(owner, "Receipt", true);
         this.ui = ui;
-        setLayout(new BorderLayout());
+
+        setDefaultCloseOperation(DISPOSE_ON_CLOSE);
         setBackground(Color.WHITE);
-        setBorder(new EmptyBorder(12, 12, 12, 12));
+        setResizable(false);
 
-        // แผ่นขาวเต็มกรอบ
+        // ===== Paper =====
         JPanel paper = new JPanel(new BorderLayout());
+        paper.setOpaque(true);
         paper.setBackground(Color.WHITE);
-        paper.setBorder(new EmptyBorder(28, 32, 28, 32));
-        add(paper, BorderLayout.CENTER);
+        paper.setBorder(new EmptyBorder(16, 20, 16, 20));
+        setContentPane(paper);
 
-        // ===== Header =====
+        JPanel frame = new JPanel();
+        frame.setOpaque(false);
+        frame.setLayout(new BoxLayout(frame, BoxLayout.Y_AXIS));
+
+        // ==== HEADER ====
         JPanel header = new JPanel(new BorderLayout());
         header.setOpaque(false);
-        header.setBorder(new EmptyBorder(0, 0, 6, 0));
+        header.setBorder(new EmptyBorder(0, 30, 8, 0));
 
         JLabel title = new JLabel("MAEVE COFFEE", SwingConstants.CENTER);
         title.setFont(new Font("SansSerif", Font.BOLD, 28));
-        title.setForeground(new Color(0x1F1F1F));
+        title.setForeground(Ui.BROWN_DARK);
         header.add(title, BorderLayout.CENTER);
 
+        // Close
         JButton btnClose = new JButton("\u2715");
         btnClose.setFocusPainted(false);
         btnClose.setBorderPainted(false);
         btnClose.setContentAreaFilled(false);
         btnClose.setOpaque(false);
-        btnClose.setForeground(new Color(0x1F1F1F));
-        btnClose.setFont(new Font("SansSerif", Font.BOLD, 24));
+        btnClose.setForeground(Ui.BROWN_DARK);
+        btnClose.setFont(new Font("SansSerif", Font.BOLD, 22));
         btnClose.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-        btnClose.addActionListener(e -> {
-            int ans = JOptionPane.showConfirmDialog(
-                    this,
-                    "Cancel and return to menu?",
-                    "Cancel receipt",
-                    JOptionPane.YES_NO_OPTION,
-                    JOptionPane.WARNING_MESSAGE);
-            if (ans == JOptionPane.YES_OPTION) ui.show("COFFEE_MENU");
-        });
+        btnClose.addActionListener(e -> dispose());
         JPanel closeWrap = new JPanel(new FlowLayout(FlowLayout.RIGHT, 0, 0));
         closeWrap.setOpaque(false);
         closeWrap.add(btnClose);
         header.add(closeWrap, BorderLayout.EAST);
 
-        paper.add(header, BorderLayout.NORTH);
+        frame.add(header);
 
-        // ===== Body =====
-        JPanel body = new JPanel();
-        body.setOpaque(false);
-        body.setLayout(new BoxLayout(body, BoxLayout.Y_AXIS));
-        body.setBorder(new EmptyBorder(10, 0, 5, 0));
+        // ==== USER, TIME ====
+        JPanel topInfo = new JPanel(new GridBagLayout());
+        topInfo.setOpaque(false);
 
-        // user row
-        JPanel rowUser = new JPanel(new BorderLayout());
-        rowUser.setOpaque(false);
-        nameLeft = makeLabel("GUEST", 18, Font.BOLD, 0x1F1F1F);
-        pointRight = makeLabel("", 16, Font.PLAIN, 0x1F1F1F);
-        rowUser.add(nameLeft, BorderLayout.WEST);
-        rowUser.add(pointRight, BorderLayout.EAST);
+        nameLeft = makeLabel("GUEST", 18, Font.BOLD, Ui.BROWN_DARK);
+        pointLeft = makeLabel("", 16, Font.PLAIN, Ui.BROWN_DARK);
+        dateLbl = makeLabel("--/--/--", 16, Font.PLAIN, Ui.BROWN_DARK);
+        timeLbl = makeLabel("--:--", 16, Font.PLAIN, Ui.BROWN_DARK);
 
-        // datetime row
-        JPanel rowDT = new JPanel(new BorderLayout());
-        rowDT.setOpaque(false);
-        dateLbl = makeLabel("--/--/--", 20, Font.PLAIN, 0x444444);
-        timeLbl = makeLabel("--:--", 20, Font.PLAIN, 0x444444);
-        rowDT.add(dateLbl, BorderLayout.WEST);
-        rowDT.add(timeLbl, BorderLayout.EAST);
+        int vgap = 6;
 
-        // ทำเลย์เอาต์นิ่ง: ล็อกความสูงแถว + จองความกว้าง pointRight
-        final int H_ROW = 32;
-        String sample = "Your Point : 9999";
-        FontMetrics pfm = getFontMetrics(pointRight.getFont());
-        int pointW = pfm.stringWidth(sample) + 6;
-        Dimension POINT_DIM = new Dimension(pointW, H_ROW);
-        pointRight.setPreferredSize(POINT_DIM);
-        pointRight.setMinimumSize(POINT_DIM);
-        pointRight.setMaximumSize(POINT_DIM);
+        GridBagConstraints gc = new GridBagConstraints();
+        gc.insets = new Insets(0, 0, 0, 0);
+        gc.gridy = 0;
 
-        Dimension ROW_DIM = new Dimension(Integer.MAX_VALUE, H_ROW);
-        rowUser.setPreferredSize(ROW_DIM);
-        rowUser.setMinimumSize(ROW_DIM);
-        rowUser.setMaximumSize(ROW_DIM);
-        rowDT.setPreferredSize(ROW_DIM);
-        rowDT.setMinimumSize(ROW_DIM);
-        rowDT.setMaximumSize(ROW_DIM);
+        gc.gridx = 0;
+        gc.anchor = GridBagConstraints.WEST;
+        gc.weightx = 1.0;
+        topInfo.add(nameLeft, gc);
 
-        body.add(rowUser);
-        body.add(rowDT);
-        body.add(dash());
-        body.add(space(6));
+        gc.gridx = 1;
+        gc.anchor = GridBagConstraints.EAST;
+        gc.weightx = 0;
+        topInfo.add(dateLbl, gc);
 
+        gc.gridy = 1;
+        gc.insets = new Insets(vgap, 0, 0, 0);
+
+        gc.gridx = 0;
+        gc.anchor = GridBagConstraints.WEST;
+        gc.weightx = 1.0;
+        topInfo.add(pointLeft, gc);
+
+        gc.gridx = 1;
+        gc.anchor = GridBagConstraints.EAST;
+        gc.weightx = 0;
+        topInfo.add(timeLbl, gc);
+
+        frame.add(topInfo);
+        frame.add(dash());
+
+        paper.add(frame, BorderLayout.NORTH);
+
+        // ==== ITEM LIST ====
         itemsBox = new JPanel();
         itemsBox.setOpaque(false);
         itemsBox.setLayout(new BoxLayout(itemsBox, BoxLayout.Y_AXIS));
-        itemsBox.setMaximumSize(new Dimension(Integer.MAX_VALUE, Integer.MAX_VALUE));
-        body.add(itemsBox);
+        itemsBox.setBorder(new EmptyBorder(8, 0, 15, 0));
 
-        body.add(space(8));
+        JPanel listHolder = new JPanel(new BorderLayout());
+        listHolder.setOpaque(false);
+        listHolder.add(itemsBox, BorderLayout.NORTH);
+
+        JScrollPane centerScroll = new JScrollPane(listHolder);
+        centerScroll.setBorder(BorderFactory.createEmptyBorder());
+        centerScroll.setOpaque(false);
+        centerScroll.getViewport().setOpaque(false);
+        centerScroll.setHorizontalScrollBarPolicy(ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
+
+        paper.add(centerScroll, BorderLayout.CENTER);
+
+        JPanel southframe = new JPanel();
+        southframe.setOpaque(false);
+        southframe.setLayout(new BoxLayout(southframe, BoxLayout.Y_AXIS));
+
+        // Total
         JPanel rowTotal = new JPanel(new BorderLayout());
         rowTotal.setOpaque(false);
-        rowTotal.add(makeLabel("Total", 20, Font.BOLD, 0x1F1F1F), BorderLayout.WEST);
-        totalLbl = makeLabel("0 ฿", 20, Font.BOLD, 0x1F1F1F);
+        rowTotal.setBorder(new EmptyBorder(8, 0, 8, 0));
+        rowTotal.add(makeLabel("Total", 18, Font.BOLD, Ui.BROWN_DARK), BorderLayout.WEST);
+        totalLbl = makeLabel("0 ฿", 18, Font.BOLD, Ui.BROWN_DARK);
         rowTotal.add(totalLbl, BorderLayout.EAST);
-        body.add(rowTotal);
+        southframe.add(rowTotal);
 
-        body.add(space(8));
-        body.add(dash());
-        body.add(space(8));
+        southframe.add(dash());
 
-        rewardLbl = makeLabel("You may take this bill to cashier counter", 14, Font.PLAIN, 0x666666);
-        rewardLbl.setAlignmentX(Component.CENTER_ALIGNMENT);
-        body.add(rewardLbl);
+        rewardLbl = makeLabel("Received 0 Point", 14, Font.PLAIN, Ui.BROWN_DARK);
+        rewardLbl.setHorizontalAlignment(SwingConstants.CENTER);
+        JPanel rewardRow = new JPanel(new BorderLayout());
+        rewardRow.setOpaque(false);
+        rewardRow.setBorder(new EmptyBorder(8, 0, 0, 0));
+        rewardRow.add(rewardLbl, BorderLayout.CENTER);
+        southframe.add(rewardRow);
 
-        body.add(space(8));
-        body.add(dash());
+        paper.add(southframe, BorderLayout.SOUTH);
 
-        paper.add(body, BorderLayout.CENTER);
+        pointsListener = newPts -> SwingUtilities.invokeLater(() -> pointLeft.setText("Current Point : " + newPts));
+        ui.addPointsListener(pointsListener);
 
-        // Refresh เมื่อถูกโชว์
         addComponentListener(new java.awt.event.ComponentAdapter() {
-            @Override public void componentShown(java.awt.event.ComponentEvent e) { populate(); }
+            @Override
+            public void componentShown(java.awt.event.ComponentEvent e) {
+                populate();
+            }
         });
+
+        setSize(520, 720);
+        setLocationRelativeTo(owner);
     }
 
-    private void populate() {
-        MaeveCoffeeUI.OrderSummary o = ui.getLastOrder();
-        if (o == null) return;
+    public void populate() {
 
-        String uname = (o.username == null || o.username.isBlank()) ? "GUEST" : o.username;
-        nameLeft.setText(uname.toUpperCase());
+        String uname = ui.getCurrentUser();
+        nameLeft.setText(uname == null || uname.trim().isEmpty() ? "GUEST" : uname);
+        pointLeft.setText("Current Point : " + ui.getCurrentPoints());
 
-        if (!"GUEST".equalsIgnoreCase(uname)) {
-            pointRight.setText("Your Point : " + (o.pointsBefore + o.pointsEarned));
-        } else {
-            pointRight.setText("\u00A0");
-        }
-
-        dateLbl.setText(String.format("%d/%d/%02d",
-                o.date.getDayOfMonth(), o.date.getMonthValue(), o.date.getYear() % 100));
-        timeLbl.setText(String.format("%02d:%02d", o.time.getHour(), o.time.getMinute()));
+        LocalDateTime now = LocalDateTime.now();
+        dateLbl.setText(
+                String.format("%02d/%02d/%02d", now.getDayOfMonth(), now.getMonthValue(), (now.getYear() % 100)));
+        timeLbl.setText(String.format("%02d:%02d", now.getHour(), now.getMinute()));
 
         itemsBox.removeAll();
-        for (MaeveCoffeeUI.OrderItem it : o.items) {
-            JPanel row = new JPanel(new BorderLayout());
-            row.setOpaque(false);
-            row.setBorder(new EmptyBorder(8, 0, 8, 0));
-            row.add(makeLabel(it.qty + " " + it.label, 20, Font.PLAIN, 0x222222), BorderLayout.WEST);
-            row.add(makeLabel(it.lineTotal() + "  ฿", 20, Font.BOLD, 0x111111), BorderLayout.EAST);
-            itemsBox.add(row);
-        }
-        totalLbl.setText(o.total() + "  ฿");
 
-        if (!"GUEST".equalsIgnoreCase(uname))
-            rewardLbl.setText("Received " + o.pointsEarned + " Point" + (o.pointsEarned > 1 ? "s" : "") + " and 1 Ticket");
-        else
-            rewardLbl.setText("You may take this bill to cashier counter");
+        MaeveCoffeeUI.OrderSummary o = ui.getLastOrder();
+        if (o != null) {
+
+            List<MaeveCoffeeUI.OrderItem> items = o.items;
+            for (MaeveCoffeeUI.OrderItem it : items) {
+                JPanel row = new JPanel(new BorderLayout());
+                row.setOpaque(false);
+                row.setBorder(new EmptyBorder(10, 0, 10, 0));
+
+                JLabel left = makeLabel(it.qty + " " + it.label, 16, Font.PLAIN, Ui.BROWN_DARK);
+                JLabel right = makeLabel(it.lineTotal() + " ฿", 16, Font.BOLD, Ui.BROWN_DARK);
+
+                row.add(left, BorderLayout.WEST);
+                row.add(right, BorderLayout.EAST);
+                itemsBox.add(row);
+            }
+            totalLbl.setText(o != null ? o.total() + " ฿" : "0 ฿");
+
+            int earned = (o != null) ? Math.max(0, o.pointsEarned) : 0;
+
+            if (ui.isSignedIn()) {
+                rewardLbl.setText("Received " + earned + " Point" + (earned == 1 ? "" : "s"));
+            } else {
+                rewardLbl.setText("You may take this bill to cashier counter");
+            }
+
+        }
 
         itemsBox.revalidate();
         itemsBox.repaint();
     }
 
-    // Helpers
-    private JLabel makeLabel(String t, int sz, int style, int rgb) {
+    // ========= helper =========
+    private JLabel makeLabel(String t, int sz, int style, Color color) {
         JLabel l = new JLabel(t);
         l.setFont(new Font("SansSerif", style, sz));
-        l.setForeground(new Color(rgb));
+        l.setForeground(color);
         return l;
     }
-    private Component space(int h) { JPanel p = new JPanel(); p.setOpaque(false); p.setPreferredSize(new Dimension(1,h)); return p; }
+
+    private JLabel makeLabel(String t, int sz, int style, int rgb) {
+        return makeLabel(t, sz, style, new Color(rgb));
+    }
+
     private JComponent dash() {
-        return new JComponent(){
-            @Override protected void paintComponent(Graphics g){
-                Graphics2D g2=(Graphics2D)g;
-                g2.setColor(new Color(0x1F1F1F));
-                float[] ds={6f,6f};
-                g2.setStroke(new BasicStroke(2f,BasicStroke.CAP_BUTT,BasicStroke.JOIN_BEVEL,10f,ds,0f));
-                int y=getHeight()/2;
-                g2.drawLine(0,y,getWidth(),y);
+        JComponent c = new JComponent() {
+            @Override
+            protected void paintComponent(Graphics g) {
+                super.paintComponent(g);
+                Graphics2D g2 = (Graphics2D) g.create();
+                g2.setColor(new Color(0xCCBDA7));
+                int y = getHeight() / 2;
+                g2.drawLine(0, y, getWidth(), y);
+                g2.dispose();
             }
-            @Override public Dimension getPreferredSize(){return new Dimension(10,12);}
         };
+        c.setPreferredSize(new Dimension(1, 12));
+        c.setOpaque(false);
+        return c;
     }
 }
